<?xml version="1.0"?>
<package format="3">
  <name>quickplot</name>
  <version>0.1.0</version>
  <description>Realtime plotting for ROS</description>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>four_wheel_steering_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
